--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
         <!-- Install -->
         <section class="install">
             <div class="container">
-                <div class="install__inner">class="install__img"
+                <div class="install__inner">
                     <figure>
-                        <svg width="284" height="522" viewBox="0 0 284 522" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <svg width="284" height="522" viewBox="0 0 284 522" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="install__img">
                             <rect width="284" height="522" fill="url(#pattern0)"/>
                             <defs>
                                 <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
