--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <!-- Members -->
         <section class="member">
             <div class="container">
-                <h2 class="section-heading member__heading">Our virtual dentist</h2>
+                <h2 class="section-heading member__heading">Thanh Toàn</h2>
                 <a href="#!" class="btn">Meet our dentist</a>
                 <div class="member__list">
                     <section class="member__item">
